<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/TB_email"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans_extrabold_italic"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/TB_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TB_pseudo" />

    <EditText
        android:id="@+id/TB_pseudo"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans_extrabold_italic"
        android:hint="@string/pseudo_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/TB_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/TB_password"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans_extrabold_italic"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/TB_password_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TB_email" />

    <EditText
        android:id="@+id/TB_password_confirmation"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/alegreya_sans_extrabold_italic"
        android:hint="@string/password_confirm_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TB_password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="344dp"
        android:layout_height="112dp"
        android:fontFamily="@font/alegreya_sans_extrabold_italic"
        android:text="Créons votre compte"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/validate_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sans_extrabold_italic"
        android:text="Valider"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/gifSigns"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifSigns"
        android:layout_width="120dp"
        android:layout_height="101dp"
        android:src="@drawable/sheldon_welcome"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/validate_account_button"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:loopCount="0" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="129dp"
        android:layout_height="55dp"
        android:background="#85FFC107"
        android:fontFamily="@font/alegreya_sans_extrabold_italic"
        android:text="Déja un compte?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="642dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="514dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="159dp" />

</androidx.constraintlayout.widget.ConstraintLayout>